include/epanet2_1.h

/********************************************************************

    Pump Functions

********************************************************************/

  /**
  @brief Get the type of pump
  @param linkIndex The index of the pump element
  @param[out] outType The integer-typed pump curve type signifier (output parameter)
  @return Error code
  @see EN_PumpType
  */
  int  DLLEXPORT ENgetpumptype(int linkIndex, int *outType);
  /**
  @brief Retrieves the curve index for a specified pump index.
  @param pumpIndex The index of a pump
  @param[out] curveIndex The index of the curve used by the pump.
  @return Error code.
  */
  int  DLLEXPORT ENgetheadcurveindex(int pumpIndex, int *curveIndex);
  /**
  @brief Sets the curve id for a specified pump index.
  @param pumpIndex The index of the pump
  @param curveIndex The index of the curve used by the pump
  @return Error code.
  */
  int  DLLEXPORT ENsetheadcurveindex(int pumpIndex, int curveIndex);
/********************************************************************

    Time Pattern Functions

********************************************************************/

  /**
  @brief Add a new time pattern.
  @param id The string ID of the pattern to add.
  @return Error code.
  @see ENgetpatternindex
  */
  int  DLLEXPORT ENaddpattern(char *id);
  /**
  @brief Retrieves the index of the time pattern with specified ID
  @param id String ID of the time pattern
  @param[out] index Index of the specified time pattern
  @return Error code
  @see ENgetpatternid
  */
  int  DLLEXPORT ENgetpatternindex(char *id, int *index);
  /**
  @brief Retrieves ID of a time pattern with specific index.
  @param index The index of a time pattern.
  @param[out] id The string ID of the time pattern.
  @return Error code
  @see ENgetpatternindex
  */
  int  DLLEXPORT ENgetpatternid(int index, char *id);
  /**
  @brief Retrieves the number of multipliers in a time pattern.
  @param index The index of a time pattern.
  @param[out] len The length of the time pattern.
  @return Error code
  */
  int  DLLEXPORT ENgetpatternlen(int index, int *len);
  /**
  @brief Retrive a multiplier from a pattern for a specific time period.
  @param index The index of a time pattern
  @param period The pattern time period. First time period is 1.
  @param[out] value Pattern multiplier
  @return Error code
  */
  int  DLLEXPORT ENgetpatternvalue(int index, int period, EN_API_FLOAT_TYPE *value);
  /**
  @brief Set the multiplier for a specific pattern at a specific period.
  @param index The index of a pattern. First pattern is index 1.
  @param period The period of the pattern to set.
  @param value The value of the multiplier to set.
  @return Error code.
  */
  int  DLLEXPORT ENsetpatternvalue(int index, int period, EN_API_FLOAT_TYPE value);
  /**
  @brief Retrieve the average multiplier value in a time pattern
  @param index The index of a time pattern
  @param[out] value The average of all of this time pattern's values
  @return Error code
  */
  int  DLLEXPORT ENgetaveragepatternvalue(int index, EN_API_FLOAT_TYPE *value);
  /**
  @brief Set multipliers for a specific pattern
  @param index The index of a pattern. First pattern is index 1.
  @param f An array of multipliers
  @param len The length of array f.
  @return Error code.
  @see ENgetpatternindex
  */
  int  DLLEXPORT ENsetpattern(int index, EN_API_FLOAT_TYPE *f, int len);
/********************************************************************

    Data Curve Functions

********************************************************************/

  /**
  @brief Add a new curve to the project.
  @param id The name of the curve to be added.
  @return Error code.
  @see ENgetcurveindex ENsetcurve
  */
  int  DLLEXPORT ENaddcurve(char *id);
  /**
  @brief Retrieve the index of a curve given its name.
  @param id The ID name of a curve.
  @param[out] index The index of the named curve.
  @return Error code.
  @see ENgetcurveid
  */
  int  DLLEXPORT ENgetcurveindex(char *id, int *index);
  /**
  @brief Retrieve the ID name of a curve given its index.
  @param index The index of a curve.
  @param[out] id The ID of the specified curve.
  @return Error code.
  @see ENsetcurveindex

  NOTE: 'id' must be sized to hold MAXID characters.
  */
  int  DLLEXPORT ENgetcurveid(int index, char *id);
  /**
  @brief Retrieve the number of points in a curve.
  @param index The index of a curve.
  @param[out] len The number of data points assigned to the curve.
  @return Error code.
  @see ENgetcurvevalue
  */
  int  DLLEXPORT ENgetcurvelen(int index, int *len);
  /**
  @brief Get the type of a curve
  @param curveIndex The index of the curve element
  @param[out] outType The integer-typed curve curve type signifier (output parameter)
  @return Error code
  @see EN_CurveType
  */
  int  DLLEXPORT ENgetcurvetype(int curveIndex, int *outType);
  /**
  @brief Retrieve an x,y data point for a curve.
  @param curveIndex The index of a curve.
  @param pointIndex The index of a point in the curve.
  @param[out] x The x-value of the specified point.
  @param[out] y The y-value of the specified point.
  @return Error code.
  @see ENgetcurvelen ENsetcurvevalue
  */
  int  DLLEXPORT ENgetcurvevalue(int curveIndex, int pointIndex,
                 EN_API_FLOAT_TYPE *x, EN_API_FLOAT_TYPE *y);
  /**
  @brief Set the x and y values for a curve's data point.
  @param curveIndex The index of a curve.
  @param pointIndex The index of a point in the curve.
  @param x The x-value of the point.
  @param y The y-value of the point.
  @return Error code.
  */
  int  DLLEXPORT ENsetcurvevalue(int curveIndex, int pointIndex,
                 EN_API_FLOAT_TYPE x, EN_API_FLOAT_TYPE y);
  /**
  @brief Get a curve's properties.
  @param curveIndex The index of a curve (first curve is index 1).
  @param[out] id The curve's string ID. Client code must preallocate at least MAXID characters.
  @param[out] nValues The number of values in the curve's (x,y) list.
  @param[out] xValues The curve's x-values. Pointer must be freed by client.
  @param[out] yValues The curve's y-values. Pointer must be freed by client.
  @return Error code.

  The calling program is responsible for making xValues and yValues large enough
  to hold nValues number of data points.
  */
  int  DLLEXPORT ENgetcurve(int curveIndex, char* id, int *nValues,
                 EN_API_FLOAT_TYPE **xValues, EN_API_FLOAT_TYPE **yValues);
  /**
  @brief Set the x,y values for all points on a curve.
  @param index The index of a curve.
  @param x An array of x-values for the curve.
  @param y An array of y-values for the curve.
  @param len The length of the arrays for x and y.
  @return Error code.
  */
  int  DLLEXPORT ENsetcurve(int index, EN_API_FLOAT_TYPE *x,
                 EN_API_FLOAT_TYPE *y, int len);
/********************************************************************

    Simple Controls Functions

********************************************************************/

  /**
   @brief Add a new simple control to the project.
   @param[out] index The index of the new control. First control is index 1.
   @param ctype The type of control to add (see EN_ControlType).
   @param lindex The index of a link to control.
   @param setting The control setting applied to the link.
   @param nindex The index of a node used to control the link, or 0 for TIMER / TIMEOFDAY control.
   @param level control point (tank level, junction pressure, or time in seconds).
   @return Error code.
   */
  int  DLLEXPORT ENaddcontrol(int *index, int ctype, int lindex, EN_API_FLOAT_TYPE setting,
                              int nindex, EN_API_FLOAT_TYPE level);
  /**
   @brief Delete an existing simple control
   @param index The index of the control. First control is index 1.
   @return Error code.
  */
  int  DLLEXPORT ENdeletecontrol(int index);
  /**
   @brief Retrieves properties that define a simple control
   @param index Position of control in list of controls added to the project
   @param[out] ctype Control type code (see EN_ControlType enumeration)
   @param[out] lindex Index of controlled link
   @param[out] setting Control setting on link
   @param[out] nindex Index of controlling node (0 for TIMER or TIMEOFDAY control)
   @param[out] level Control level (tank level, junction pressure, or time (seconds))
   @return Error code
   */
  int  DLLEXPORT ENgetcontrol(int index, int *ctype, int *lindex, EN_API_FLOAT_TYPE *setting,
                              int *nindex, EN_API_FLOAT_TYPE *level);
  /**
   @brief Set the properties of an existing simple control.
   @param cindex The index of the control. First control is index 1.
   @param ctype The type of control to use (see EN_ControlType).
   @param lindex The index of a link to control.
   @param setting The control setting applied to the link.
   @param nindex The index of a node used to control the link, or 0 for TIMER / TIMEOFDAY control.
   @param level control point (tank level, junction pressure, or time in seconds).
   @return Error code.
   */
  int  DLLEXPORT ENsetcontrol(int cindex, int ctype, int lindex,
                 EN_API_FLOAT_TYPE setting, int nindex, EN_API_FLOAT_TYPE level);
/********************************************************************

    Rule-Based Controls Functions

********************************************************************/

  /**
  @brief Add a new control rule to the project.
  @param rule Text of the rule following the format used in an EPANET input file.
  @return Error code.
  */
  int DLLEXPORT ENaddrule(char *rule);
  /**
  @brief Delete a rule-based control.
  @param index The rule's index.
  @return Error code.
  */
  int  DLLEXPORT ENdeleterule(int index);
  /**
   @brief Get summary information for a rule-based control.
   @param index The rule's index.
   @param[out] nPremises Number of premises in the rule's IF section.
   @param[out] nThenActions Number of actions in the rule's THEN section.
   @param nElseActions[out] Number of actions in the rule's ELSE section.
   @param priority[out] Rule's priority.
   @return Error code.
   */
  int  DLLEXPORT ENgetrule(int index, int *nPremises, int *nTrueActions,
                 int *nFalseActions, EN_API_FLOAT_TYPE *priority);
  /**
  @brief Get the ID name of a rule-based control.
  @param index The rule's index.
  @param id[out] The rule's ID name.
  @return Error code.
  */
  int  DLLEXPORT ENgetruleID(int index, char* id);
  /**
   @brief Get the properties of a premise in a rule-based control.
   @param ruleIndex The rule's index.
   @param premiseIndex The premise's index.
   @param logop[out] Logical operator (IF = 1, AND = 2, OR = 3) of the premise.
   @param object[out] Type of object the premise is looking at (see EN_RuleObject).
   @param objIndex[out] Index of the object (e.g. the index of the tank).
   @param variable[out] Index of the variable to be checked (see EN_RuleVariable).
   @param relop[out] Relationship operator in the premise (see EN_RuleOperator).
   @param status[out] Status of the object being checked (see EN_RuleStatus).
   @param value[out] Setting of the variable being checked (e.g. 5.5)
   @return Error code.
   */
  int  DLLEXPORT ENgetpremise(int ruleIndex, int premiseIndex, int *logop,
                 int *object, int *objIndex, int *variable,
                 int *relop, int *status, EN_API_FLOAT_TYPE *value);
  /**
   @brief Set the properties of a premise in a rule-based control.
   @param ruleIndex The rule's index.
   @param premiseIndex The premise's index.
   @param logop Logical operator (IF = 1, AND = 2, OR = 3) of the premise.
   @param object Type of object the premise is looking at (see EN_RuleObject).
   @param objIndex Index of the object (e.g. the index of the tank).
   @param variable Index of the variable to be checked (see EN_RuleVariable).
   @param relop Relationship operator in the premise (see EN_RuleOperator).
   @param status Status of the object being checked (see EN_RuleStatus).
   @param value Setting of the variable being checked (e.g. 5.5)
   @return Error code.
   */
  int  DLLEXPORT ENsetpremise(int ruleIndex, int premiseIndex, int logop,
                 int object, int objIndex, int variable, int relop,
                 int status, EN_API_FLOAT_TYPE value);
  /**
   @brief Set the index of an object in a premise of a rule-based control.
   @param ruleIndex The rule's index.
   @param premiseIndex The premise's index.
   @param objIndex The index of the premise's object (e.g. the index of the tank).
   @return Error code.
   */
  int  DLLEXPORT ENsetpremiseindex(int ruleIndex, int premiseIndex, int objIndex);
  /**
   @brief Set the status in a premise of a rule-based control.
   @param ruleIndex The rule's index.
   @param premiseIndex The premise's index.
   @param status The status of the object being checked (see EN_RuleStatus)
   @return Error code.
   */
  int  DLLEXPORT ENsetpremisestatus(int ruleIndex, int premiseIndex, int status);
  /**
   @brief Set the value in a premise of a rule-based control.
   @param ruleIndex The rule's index.
   @param premiseIndex The premise's index.
   @param value The value of the premise's variable being checked (e.g. 5.5)
   @return Error code.
   */
  int  DLLEXPORT ENsetpremisevalue(int ruleIndex, int premiseIndex,
                 EN_API_FLOAT_TYPE value);
  /**
   @brief Get the properties of a THEN action in a rule-based control.
   @param ruleIndex The rule's index.
   @param actionIndex Index of the THEN action to retrieve.
   @param linkIndex[out] Index of the link in the action (e.g. index of Pump 1)
   @param status[out] Status of the link (see EN_RuleStatus)
   @param setting[out] Value of the link's setting (e.g. pump speed 0.9)
   @return Error code.
   */
  int  DLLEXPORT ENgetthenaction(int ruleIndex, int actionIndex, int *linkIndex,
                 int *status, EN_API_FLOAT_TYPE *setting);
  /**
   @brief Set the properties of a THEN action in a rule-based control.
   @param ruleIndex The rule's index.
   @param actionIndex Index of the THEN action to modify.
   @param linkIndex Index of the link in the action (e.g. index of Pump 1)
   @param status Status assigned to the link (e.g. CLOSED)
   @param setting Setting value assigned to the link (e.g. pump speed 0.9)
   @return Error code.
   */
  int  DLLEXPORT ENsetthenaction(int ruleIndex, int actionIndex, int linkIndex,
                 int status, EN_API_FLOAT_TYPE setting);
  /**
   @brief Get the properties of an ELSE action in a rule-based control.
   @param ruleIndex The rule's index.
   @param actionIndex Index of the ELSE action to retrieve.
   @param linkIndex[out] Index of the link in the action (e.g. index of Pump 1).
   @param status[out] Status of the link (see EN_RuleStatus).
   @param setting[out] Value of the link's setting (e.g. pump speed 0.9)
   @return Error code.
   */
  int  DLLEXPORT ENgetelseaction(int ruleIndex, int actionIndex, int *linkIndex,
                 int *status, EN_API_FLOAT_TYPE *setting);
  /**
   @brief Set the properties of an ELSE action in a rule-based control.
   @param ruleIndex The rule's index.
   @param actionIndex Index of the ELSE action being modified.
   @param linkIndex Index of the link in the action (e.g. index of Pump 1)
   @param status Status assigned to the link (see EN_RuleStatus)
   @param setting Setting value assigned to the link (e.g. pump speed 0.9)
   @return Error code.
   */
  int  DLLEXPORT ENsetelseaction(int ruleIndex, int actionIndex, int linkIndex,
                 int status, EN_API_FLOAT_TYPE setting);
  /**
  @brief Set the priority of a rule-based control.
  @param index The rule's index.
  @param priority The priority assigned to the rule.
  @return Error code.
  */
  int  DLLEXPORT ENsetrulepriority(int index, EN_API_FLOAT_TYPE priority);