include/epanet2.cs


        //Pump Functions
        [DllImport(EPANETDLL, EntryPoint = "ENgetheadcurveindex")]
        public static extern int ENgetheadcurveindex(int linkIndex, ref int curveIndex);

        [DllImport(EPANETDLL, EntryPoint = "ENsetheadcurveindex")]
        public static extern int ENsetheadcurveindex(int linkIndex, int curveIndex);

        [DllImport(EPANETDLL, EntryPoint = "ENgetpumptype")]
        public static extern int ENgetpumptype(int linkIndex, ref int pumpType);


        //Time Pattern Functions
        [DllImport(EPANETDLL, EntryPoint = "ENaddpattern")]
        public static extern int ENaddpattern(string id);

        [DllImport(EPANETDLL, EntryPoint = "ENdeletepattern")]
        public static extern int ENdeletepattern(int index);

        [DllImport(EPANETDLL, EntryPoint = "ENgetpatternindex")]
        public static extern int ENgetpatternindex(string id, ref int index);

        [DllImport(EPANETDLL, EntryPoint = "ENgetpatternid")]
        public static extern int ENgetpatternid(int index, string id);

        [DllImport(EPANETDLL, EntryPoint = "ENsetpatternid")]
        public static extern int ENsetpatternid(int index, string id);

        [DllImport(EPANETDLL, EntryPoint = "ENgetpatternlen")]
        public static extern int ENgetpatternlen(int index, ref int len);

        [DllImport(EPANETDLL, EntryPoint = "ENgetpatternvalue")]
        public static extern int ENgetpatternvalue(int index, int period, ref float value);

        [DllImport(EPANETDLL, EntryPoint = "ENsetpatternvalue")]
        public static extern int ENsetpatternvalue(int index, int period, float value);

        [DllImport(EPANETDLL, EntryPoint = "ENgetaveragepatternvalue")]
        public static extern int ENgetaveragepatternvalue(int index, ref float value);

        [DllImport(EPANETDLL, EntryPoint = "ENsetpattern")]
        public static extern int ENsetpattern(int index, ref float[] values, int len);


        //Data Curve Functions
        [DllImport(EPANETDLL, EntryPoint = "ENaddcurve")]
        public static extern int ENaddcurve(string id);

        [DllImport(EPANETDLL, EntryPoint = "ENdeletecurve")]
        public static extern int ENdeletecurve(int index);

        [DllImport(EPANETDLL, EntryPoint = "ENgetcurveindex")]
        public static extern int ENgetcurveindex(string id, ref int index);

        [DllImport(EPANETDLL, EntryPoint = "ENgetcurveid")]
        public static extern int ENgetcurveid(int index, string id);

        [DllImport(EPANETDLL, EntryPoint = "ENsetcurveid")]
        public static extern int ENsetcurveid(int index, string id);

        [DllImport(EPANETDLL, EntryPoint = "ENgetcurvelen")]
        public static extern int ENgetcurvelen(int index, ref int len);

        [DllImport(EPANETDLL, EntryPoint = "ENgetcurvetype")]
        public static extern int ENgetcurvetype(int index, ref int type);

        [DllImport(EPANETDLL, EntryPoint = "ENgetcurvevalue")]
        public static extern int ENgetcurvevalue(int curveIndex, int pointIndex, ref float x, ref float y);

        [DllImport(EPANETDLL, EntryPoint = "ENsetcurvevalue")]
        public static extern int ENsetcurvevalue(int curveIndex, int pointIndex, float x, float y);

        [DllImport(EPANETDLL, EntryPoint = "ENgetcurve")]
        public static extern int ENgetcurve(int index, string id, ref int nPoints, ref float xValues, ref float yValues);

        [DllImport(EPANETDLL, EntryPoint = "ENsetcurve")]
        public static extern int ENsetcurve(int index, ref float[] xValues, ref float[] yValues, int nPoints);


        //Simple Control Functions
        [DllImport(EPANETDLL, EntryPoint = "ENaddcontrol")]
        public static extern int ENaddcontrol(int type, int linkIndex, float setting, int nodeIndex, float level, ref int index);

        [DllImport(EPANETDLL, EntryPoint = "ENdeletecontrol")]
        public static extern int ENdeletecontrol(int index);

        [DllImport(EPANETDLL, EntryPoint = "ENgetcontrol")]
        public static extern int ENgetcontrol(int index, ref int type, ref int linkIndex, ref float setting, ref int nodeIndex, ref float level);

        [DllImport(EPANETDLL, EntryPoint = "ENsetcontrol")]
        public static extern int ENsetcontrol(int index, int type, int linkIndex, float setting, int nodeIndex, float level);

        [DllImport(EPANETDLL, EntryPoint = "ENgetcontrolenabled")]
        public static extern int ENgetcontrolenabled(int index, int out_enabled);

        [DllImport(EPANETDLL, EntryPoint = "ENsetcontrolenabled")]
        public static extern int ENsetcontrolenabled(int index, int enabled);


        //Rule-Based Control Functions
        [DllImport(EPANETDLL, EntryPoint = "ENaddrule")]
        public static extern int ENaddrule(string rule);

        [DllImport(EPANETDLL, EntryPoint = "ENdeleterule")]
        public static extern int ENdeleterule(int index);

        [DllImport(EPANETDLL, EntryPoint = "ENgetrule")]
        public static extern int ENgetrule(int index, ref int nPremises, ref int nThenActions, ref int nElseActions, ref float priority);

        [DllImport(EPANETDLL, EntryPoint = "ENgetruleID")]
        public static extern int ENgetruleID(int index, string id);

        [DllImport(EPANETDLL, EntryPoint = "ENsetrulepriority")]
        public static extern int ENsetcurvENsetrulepriorityeid(int index, float priority);

        [DllImport(EPANETDLL, EntryPoint = "ENgetpremise")]
        public static extern int ENgetpremise(int ruleIndex, int premiseIndex, ref int logop, ref int objectt, ref int objIndex, ref int variable, ref int relop, ref int status, ref float value);

        [DllImport(EPANETDLL, EntryPoint = "ENsetpremise")]
        public static extern int ENsetpremise(int ruleIndex, int premiseIndex, int logop, int objectt, int objIndex, int variable, int relop, int status, float value);

        [DllImport(EPANETDLL, EntryPoint = "ENsetpremiseindex")]
        public static extern int ENsetpremiseindex(int ruleIndex, int premiseIndex, int objIndex);

        [DllImport(EPANETDLL, EntryPoint = "ENsetpremisestatus")]
        public static extern int ENsetpremisestatus(int ruleIndex, int premiseIndex, int status);

        [DllImport(EPANETDLL, EntryPoint = "ENsetpremisevalue")]
        public static extern int ENsetpremisevalue(int ruleIndex, int premiseIndex, float value);

        [DllImport(EPANETDLL, EntryPoint = "ENgetthenaction")]
        public static extern int ENgetthenaction(int ruleIndex, int actionIndex, ref int linkIndex, ref int status, ref float setting);

        [DllImport(EPANETDLL, EntryPoint = "ENsetthenaction")]
        public static extern int ENsetthenaction(int ruleIndex, int actionIndex, int linkIndex, int status, float setting);

        [DllImport(EPANETDLL, EntryPoint = "ENgetelseaction")]
        public static extern int ENgetelseaction(int ruleIndex, int actionIndex, ref int linkIndex, ref int status, ref float setting);

        [DllImport(EPANETDLL, EntryPoint = "ENsetelseaction")]
        public static extern int ENsetelseaction(int ruleIndex, int actionIndex, int linkIndex, int status, float setting);

        [DllImport(EPANETDLL, EntryPoint = "ENgetruleenabled")]
        public static extern int ENgetruleenabled(int index, int out_enabled);

        [DllImport(EPANETDLL, EntryPoint = "ENsetruleenabled")]
        public static extern int ENsetruleenabled(int index, int enabled);

        #endregion
    }
    
}
